# research_project

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
data/URDF/: ur10e.urdf  ur20_tool_90deg.urdf
data/auto_generated/export/: 251117_163017_metadata.json  251117_163017_planes.json
data/auto_generated/planned_motion/: 250516_092402_shortest_path.json  250516_094421_collision_free_solutions.json  250516_094421_descartes.json  250516_094421_l2+1.json  250516_094421_l2.json  251117_163017_collision_free_solutions.json  251117_163017_shortest_path.json
data/tool_geometry/: 250213_90deg.stl  250213_90deg_adapter.stl  250213_90deg_adapter_straight_inlet.stl  250213_adapter.stl  250213_attachment.stl  250213_base.stl  250213_clamp1.stl  250213_clamp2.stl  250213_clamp3.stl  250213_inlet.stl  250213_motor.stl  250213_motor_flange.stl  250213_pipe.stl  250213_valve.stl  250423_inlet_straight.stl  250515_90deg_adapter_straight_inlet.stl
src/research_project/: __version__.py
src/research_project/collision_checking/: collision_checking_pybullet.py  pybullet_server.py
src/research_project/motion_planning/: graph_based_optimum.py  ik_tools.py
src/research_project/utilities/: run_all.py  utils.py
src/research_project/utilities/grassopper_io/: __init__.py  attach_tool.py  export_mesh.py  gh_export_vars.py  import_config_from_json.py
src/research_project/utilities/preprocessing/: __init__.py  edit.py
