[bdist_wheel]
universal = 1

[flake8]
max-line-length = 180
exclude = */migrations/*

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = False
line_length = 180
known_first_party = research_project
default_section = THIRDPARTY
forced_separate = test_research_project
not_skip = __init__.py
skip = migrations

[metadata]
name = research_project
version = 0.0.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    networkx
    pybullet
    compas>=2.0
    compas_robots
    compas_fab

[options.extras_require]
rhino =
    compas_rhino
    compas_ghpython
dev =
    sphinx>=1.5
    invoke>=0.14
    bumpversion>=0.5
    check-manifest>=0.36
    flake8
    autopep8
    pylint
    pytest
    isort
    twine